# crypt_guard

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  SECUREHUB_CRYPT_GUARD_UPDATE_PLAN.md  _errors.txt  build_stderr.txt  build_stderr2.txt  build_stderr3.txt  build_stderr4.txt  e.txt  e2.txt  e3.txt  log.rs  test_stderr.txt  test_stdout.txt  warnings.txt
.claude/workflows/: crypt-guard-everything.js
.github/: FUNDING.yml
.github/workflows/: rust.yml
CryptGuardKyber/: .gitignore  Cargo.toml  README.md
CryptGuardKyber/src/: decrypt.rs  encrypt.rs  keychain.rs  lib.rs
CryptGuardSign/: Cargo.toml  README.md
CryptGuardSign/src/: lib.rs  sign_dilithium.rs  sign_falcon.rs
Falcon1024/: key.pub  key.sec
crypt_guard_proc/: Cargo.toml
crypt_guard_proc/src/: lib.rs
examples/: Cargo.toml  devices.rs_old  encrypt_aes.rs  encrypt_xchacha.rs  macro_example.rs  signed_message.rs
guides/: algorithms.md  architecture.md  examples.md  feature-flags.md  legacy-migration.md  overview.md  release-readiness.md  security-model.md
key/: ciphertext.ct
old/: Cargo.toml
session-2026-06-21/: 00-overview.md  01-research-hpke-nist-giants.md  02-old-conventions-audit.md  03-status-and-changes.md  04-design-and-roadmap.md  05-continuation.md
src/: builder.rs  decrypt.rs  encrypt.rs  error.rs  file_remover.rs  keychain.rs  lib.rs  log.rs  main.rs  markers.rs  pq_hpke.rs  sign.rs  sign_dilithium.rs  sign_falcon.rs  utils.rs
src/Core/: KDF.rs  cipher_aes.rs  cipher_aes_ctr.rs  cipher_aes_gcm_siv.rs  cipher_aes_xts.rs  cipher_xchacha.rs  cipher_xchacha_poly.rs  devices_old.rs  mod.rs
src/Core/container/: mod.rs
src/Core/devices/: container.rs  device.rs  disk_io.rs  errors.rs  mod.rs
src/Core/kyber/: KeyControler.rs  KeyKyber.rs  kyber_crypto.rs  kyber_crypto_aes.rs  kyber_crypto_aes_ctr.rs  kyber_crypto_aes_gcm_siv.rs  kyber_crypto_aes_xts.rs  kyber_crypto_xchacha.rs  kyber_crypto_xchacha_poly.rs  mod.rs
src/KeyControl/: file.rs  key.rs  keychain.rs  mod.rs
src/Utils/: archive.rs  mod.rs  zip_manager.rs
src/api/: hpke.rs  mod.rs  open.rs  seal.rs
src/core/: cipher_aes.rs  cipher_aes_ctr.rs  cipher_aes_gcm_siv.rs  cipher_aes_xts.rs  cipher_xchacha.rs  cipher_xchacha_poly.rs  kdf.rs  mod.rs
src/core/hub/: cipher_impls.rs  macros.rs  mod.rs
src/core/kyber/: key_controler.rs  kyber_crypto.rs  kyber_crypto_aes.rs  kyber_crypto_aes_ctr.rs  kyber_crypto_aes_gcm_siv.rs  mod.rs
src/cryptography/: cryptographic.rs  mod.rs
src/cryptography/cipher_aes/: mod.rs
src/cryptography/cipher_xchacha/: mod.rs
src/cryptography/hmac_sign/: mod.rs  sign.rs
src/cryptography/signature/: mod.rs  sign.rs  sign_dilithium.rs  sign_falcon.rs
src/hpke/: mod.rs  rfc9180.rs
src/hpke_pq/: mod.rs
src/kdf/: hkdf.rs  mod.rs  types.rs
src/kem/: backend.rs  ml_kem.rs  mod.rs  types.rs
src/key_control/: file.rs  key.rs  mod.rs
src/legacy/: mod.rs
src/legacy/kyber_crypto/: key_controler.rs  kyber_crypto_aes.rs  kyber_crypto_aes_ctr.rs  kyber_crypto_aes_gcm_siv.rs  kyber_crypto_aes_xts.rs  kyber_crypto_xchacha.rs  kyber_crypto_xchacha_poly.rs  mod.rs
src/legacy/sign/: mod.rs
src/protocol/: aad.rs  envelope.rs  header.rs  mod.rs  signed_envelope.rs  version.rs
src/sign/: algorithm.rs  hub.rs  ml_dsa.rs  mod.rs  slh_dsa.rs
src/signed_hpke/: mod.rs
src/tests/: ArchiveTests.rs  BuilderPatternTests.rs  BuilderTests.rs  DevicesTests.rs  KyberKeyTest.rs  KyberKeyTests.rs  KyberTests.rs  LegacyCleanupTests.rs  LoggingTests.rs  MacroTests.rs  Phase3Tests.rs  SignatureTests.rs  kyber_tests.rs  mod.rs  signature_tests.rs  signatures.rs  ze_end.rs
src/utils/: archive.rs  mod.rs  zip_manager.rs
tests/: cgv2_canonical_wire.rs  hpke_pq_draft05_public.rs  pq05_full.rs  pq05_hybrid_p256.rs  pq05_hybrid_p384.rs  pq05_hybrid_x25519.rs  pq05_mlkem512.rs  pq05_turboshake.rs  pq_hpke_private_aeads.rs  pq_hpke_v3.rs  rfc9180_aeads.rs  rfc9180_dhkem.rs  rfc9180_vectors.rs  signed_envelope.rs  signed_hpke.rs  typestate_compile.rs
tests/ui/: content_decrypt_msg_on_files.rs  content_decrypt_msg_on_files.stderr  content_encrypt_data_on_files.rs  content_encrypt_data_on_files.stderr  content_encrypt_file_on_message.rs  content_encrypt_file_on_message.stderr  legacy_aes_not_safe_aead.rs  legacy_aes_not_safe_aead.stderr  opener_missing_secret_key.rs  opener_missing_secret_key.stderr  sealer_missing_plaintext.rs  sealer_missing_plaintext.stderr  sealer_missing_recipient.rs  sealer_missing_recipient.stderr
tests/vectors/: PROVENANCE.md  SHA256SUMS  hpke-pq-draft-05-test-vectors.json  verify_provenance.sh
tools/: fix_warnings.py
