workspace = { members = ["crypt_guard_proc"] }
[package]
name = "crypt_guard"
version = "1.2.12"
edition = "2021"
description = "CryptGuardLib is a comprehensive Rust library designed for strong encryption and decryption, incorporating post-quantum cryptography to safeguard against quantum threats. It's geared towards developers who need to embed advanced cryptographic capabilities in their Rust applications."
license = "MIT"
repository = "https://github.com/mm9942/crypt_guard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
env = "0.0.0"
hex = "0.4.3"
hmac = "0.12.1"
pqcrypto-falcon =  { version = "0.3.0" }
pqcrypto-traits = "0.3.5"
rand = "0.8.5"
sha2 = "0.10.8"
chacha20  = "0.9.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.1"
chrono = "0.4.37"
lazy_static = "1.4.0"
crypt_guard_proc = { path = "./crypt_guard_proc", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.10.1"
