workspace = { members = ["crypt_guard_proc"] }
[package]
name = "crypt_guard"
version = "1.3.4"
edition = "2021"
description = "CryptGuard is a post-quantum cryptography library with support for Kyber, AES, XChaCha20, and Falcon, ensuring future-proof security. Simplify encryption, decryption, and digital signing with intuitive Rust macros, designed to protect data against quantum threats."
license = "MIT"
repository = "https://github.com/mm9942/crypt_guard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
hex = "0.4.3"
hmac = "0.12.1"
pqcrypto-falcon =  { version = "0.3.0" }
pqcrypto-traits = "0.3.5"
rand = "0.8.5"
sha2 = "0.10.8"
chacha20  = "0.9.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.1"
chrono = "0.4.37"
lazy_static = "1.4.0"
crypt_guard_proc = { path = "./crypt_guard_proc", version = "0.2.0" }
zeroize = "1.8.1"
digest = "0.10.7"
sudo = "0.6.0"
sysinfo = "0.30.13"
xts-mode = "0.5.1"
block-padding = "0.3.3"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
ctr = "0.9.2"
generic-array = "1.1.0"
aes-gcm-siv = "0.11.1"
chacha20poly1305 = "0.10.1"

[dev-dependencies]
# criterion = "0.5.1"
tempfile = "3.10.1"
